<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- LoginActivity: -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_server">Server</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_server">This server name is invalid</string>
    <string name="error_invalid_username">This user name is invalid on this server</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="remember_switch">Remember Me</string>
    
    <!-- MainActivity: -->
    <string name="app_name">Expense Entry</string>
    <string name="action_settings">Settings</string>
    <string name="pin_description">Attachment</string>
    <string name="in_preparation">In Preparation:</string>
    <string name="for_approval">For Approval:</string>
    <string name="add_entry">Add Entry</string>
    <string name="receipt_files">Receipt Files</string>
    <string name="loading_status_message">Loading Data..</string>
    <string name="logout">Logout</string>
    <string name="sync">Sync</string>
    <string name="title_activity_entry">Manual Registration</string>
    <string name="error_message">No Content Available!\nThe server might have stopped working.</string>
    
    <!-- EntryActivity -->
    <string name="status">Status:</string>
    <string name="lock_status">Lock status</string>
    <string name="entry_state">Not Saved</string>
    <string name="left_entry">Previous Entry</string>
    <string name="right_entry">Next Entry</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="title_activity_selection">SelectionActivity</string>
    
    <!-- SelectionActivity -->
    <string name="input_search">Search </string>
    <string name="title_activity_date">DateActivity</string>

    <!-- DateActivity & DescriptionActivity -->
    <string name="done">Done</string>
    <string name="title_activity_description">DescriptionActivity</string>
    <string name="title_activity_amount">AmountActivity</string>

    <!-- ReceiptRow: -->
    <string name="take_photo">Take Photo</string>
    <string name="get_from_list">Get from Receipt List</string>
    <string name="get_from_camera_roll">Get from Gallery</string>
    <string name="remove_file">Remove File</string>
    <string name="receipt_label">Receipt</string>
    <string name="title_activity_receipt_files">Receipt Files</string>

    <!-- ReceiptFilesActivity -->
    <string name="take">Take</string>
    <string name="get">Get</string>
    <string name="title_activity_camera">Photo Viewer</string>
    
    <!-- CameraActivity -->
    <string name="hint_description">Description</string>
    <string name="delete">Delete</string>
    <string name="create_entry">Create Entry</string>
    <string name="save_pic">Save Picture</string>
    <string name="date_picker">Date</string>
    <string name="rotate">Rotate</string>

</resources>
