<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CameraActivity" >
    
<RelativeLayout 
    android:id="@+id/appView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/portrait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/descriptionLayout"
        android:layout_above="@+id/buttonsCameraLayout"
        android:contentDescription="@string/pin_description" />

    <LinearLayout
        android:id="@+id/descriptionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <EditText
            android:id="@+id/descriptionBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_description"
            android:inputType="text" />

        <Button
            android:id="@+id/dateButton"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/date_picker"
            style="?android:attr/buttonBarButtonStyle" />
       
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsCameraLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        style="?android:attr/buttonBarStyle" >

        <Button
            android:id="@+id/createNew"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/create_entry"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/btn_green_holo_dark" />

        <Button
            android:id="@+id/deletePic"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/delete"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/btn_green_holo_dark" />

        <Button
            android:id="@+id/takePhotoButton"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/save_pic"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/btn_green_holo_dark" />

    </LinearLayout>

</RelativeLayout>

<!-- Loading Status -->
	<LinearLayout
        android:id="@+id/loadingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/loadingBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:indeterminateOnly="true" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/loadingMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/loading_status_message"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
  	</LinearLayout>

</merge>