<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/appView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@android:color/background_dark"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/save"
            android:drawableTop="@drawable/ic_trash"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:background="@drawable/btn_bottoms_layout" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/btn_bottoms_layout"
            android:drawableTop="@drawable/ic_save_disk"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <ImageButton
            android:id="@+id/lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:background="@drawable/btn_bottoms_layout"
            android:contentDescription="@string/lock_status"
            android:src="@drawable/ic_unlock" />

        <TextView
            android:id="@+id/entryState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:layout_toLeftOf="@+id/cancel"
            android:gravity="center"
            android:text="@string/entry_state"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kind"
        android:layout_centerHorizontal="true"
        android:text="@string/status" />

    <TextView
        android:id="@+id/kind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

    <ListView
        android:id="@+id/categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomLayout"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/status"
        android:clipToPadding="false"
        android:drawSelectorOnTop="true"
        android:fastScrollEnabled="true"
        android:padding="16dp"
        android:scrollbarStyle="outsideOverlay" >

    </ListView>

</RelativeLayout>
