<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ReceiptFilesActivity" >

    <!-- AppContent: -->
	<RelativeLayout
	    android:id="@+id/appView"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:background="@color/white">

    <GridView
        android:id="@+id/receiptFiles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonsLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:numColumns="auto_fit"
       	android:columnWidth="90dp"
    	android:horizontalSpacing="2dp"
    	android:verticalSpacing="2dp"
    	android:gravity="center"
    	android:stretchMode="columnWidth" >

    </GridView>
    
    <LinearLayout
    	    android:id="@+id/buttonsLayout"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_alignParentBottom="true"
    	    android:layout_alignParentLeft="true"
    	    android:gravity="bottom"
    	    android:orientation="horizontal"
    	    android:weightSum="2"
    	    android:background="@android:color/background_dark" >

    	    <Button
    	        android:id="@+id/takePicture"
    	        style="?android:attr/buttonStyle"
    	        android:layout_width="0dp"
    	        android:layout_height="wrap_content"
    	        android:layout_weight="1"
    	        android:layout_gravity="center"
    	        android:background="@drawable/btn_green_holo_dark"
    	        android:text="@string/take"
    	        android:textColor="@android:color/white" />

    	    <Button
    	        android:id="@+id/getFromCameraRoll"
    	        style="?android:attr/buttonStyle"
    	        android:layout_width="0dp"
    	        android:layout_height="wrap_content"
    	        android:layout_weight="1"
    	        android:layout_gravity="center"
    	        android:background="@drawable/btn_green_holo_dark"
    	        android:text="@string/get"
    	        android:textColor="@android:color/white" />
    	    
    	</LinearLayout>

	</RelativeLayout>
	
	<!-- Loading Status -->
	<LinearLayout
        android:id="@+id/loadingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/loadingMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/loading_status_message"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
  	</LinearLayout>
</merge>